[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "opencone"
version = "0.0.2"
authors = [
  { name="Dileep Jayamal", email="dileep.jayamal@gmail.com" },
]
description = "A vector database wrapper on OpenSearch backend. [An alternative to Pinecone]"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mjdileep/Opencone"
"Bug Tracker" = "https://github.com/mjdileep/Opencone/issues"
